# RAG_with_Coreference_Resolution

./: .gitignore  LICENSE  README.md  config.toml  eval_dataset.csv  main.py  pyproject.toml  references.txt
Files/: sample_text.txt
RAG/: config.toml  rag.py
VectorDB/: config.toml  db.py  models.py
data_prep/: 2024_South_Korean_martial_law_crisis.txt  2025_Indonesian_protests.txt  2025_Myanmar_earthquake.txt  2025_earthquake.txt  Blackwell_(microarchitecture).txt  DeepSeek_(chatbot).txt  Fall_of_the_Assad_regime.txt  Majorana_1.txt  Model_Context_Protocol.txt  Romulus,_Remus,_and_Khaleesi.txt  scrape.py
evaluate/: create_eval_dataset.py  evaluate_rag.py  questions_groundtruths.csv
preprocessing/: preprocessing.py
questions/: script.py
