[project]
name = "marci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "chromadb>=0.6.3",
    "fastcoref>=2.1.6",
    "langchain-google-genai>=2.0.11",
    "langchain-huggingface>=0.1.2",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.2.74",
    "mwparserfromhell>=0.6.6",
    "pip>=25.0.1",
    "streamlit>=1.42.2",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
]
